<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/generalBackground">

<com.google.android.material.tabs.TabLayout
    android:id="@+id/tabLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:tabTextColor="@color/colorPrimaryDark"
    android:background="@color/cardview_dark_background">

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tabList"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/tab1_name"/>

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tabAdd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/tab2_name"/>

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tabCalendar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/tab3_name"/>

</com.google.android.material.tabs.TabLayout>

<androidx.viewpager.widget.ViewPager
    android:id="@+id/viewPager"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
</androidx.viewpager.widget.ViewPager>

</LinearLayout>