<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/generalBackground"
    android:orientation="vertical"
    tools:context=".TabAddFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tab_add_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/taskNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/inputBackgroundColor"
        android:inputType="textAutoCorrect"
        android:hint="@string/tab_list_task_name"/>

    <EditText
        android:id="@+id/taskDescriptionInput"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:background="@color/inputBackgroundColor"
        android:inputType="textAutoCorrect"
        android:hint="@string/tab_list_task_description"/>

    <DatePicker
        android:id="@+id/taskDateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/inputBackgroundColor"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

    <EditText
        android:id="@+id/taskDurationAmountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/inputBackgroundColor"
        android:hint="Durée"
        android:inputType="text"/>

    <EditText
        android:id="@+id/taskDurationUnitInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/inputBackgroundColor"
        android:hint="heures ou jours"
        android:inputType="textAutoCorrect" />

    <Button
        android:id="@+id/buttonInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ajouter"/>

</LinearLayout>